--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body{
     height: 100vh;
-    background-color: #111111;
+    background-color: #131313;
     font-family: 'Courier New', Courier, monospace;
     color: rgb(0, 255, 8);
     list-style: none;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 #nav{
-    display: flex;
-    flex-direction: row;
-    margin-top: 40px;
-    margin-left: 30px;
-    row-gap: 60%;
-    margin-right: 30px;
+ padding: 30px;
+padding-bottom: 8px;
+
 }
 #navlink{
     display: flex;
@@ -31,9 +30,25 @@ img{
     width: 20%;
 }
 #image{
-    margin-top: 200px;
+    margin-top: 150px;
 }
 #tagline{
     text-align: center;
-    margin-top: 10px;
+    margin-top: 15px;
 }
+.buynow{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.about{
+    margin-top: 150px;
+    margin-left: 50px;
+    margin-right: 40px;
+    color: aliceblue;
+}
+#form{
+    margin-top: 150px;
+    display: block;
+    margin-left: 40%;
+    font-size: larger;}
